<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:stretchColumns="1,2">

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titre1"
            android:textAlignment="center"
            android:textColor="#1AADD2"
            android:textSize="20sp"
            android:layout_span="2"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titre2"
            android:textColor="#1AADD2"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_span="2"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titre3"
            android:textColor="#1AADD2"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_span="2"/>
    </TableRow>
    <TableRow tools:ignore="UselessParent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_nombre_jour"
            android:textAlignment="center"/>
    </TableRow>
    <TableRow>
        <RadioGroup android:orientation="horizontal" android:layout_column="1">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5" />
        </RadioGroup>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/label_budget_transport" />
        <EditText android:layout_column="2"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/label_budget_transport" />
        <EditText android:layout_column="2"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/label_budget_transport" />
        <EditText android:layout_column="2"/>
    </TableRow>
    <TableRow>
        <CheckBox android:layout_column="1" android:text="@string/checkbox_2eme_repas" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/label_budget_transport" />
        <EditText android:layout_column="2"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/label_budget_transport" />
        <EditText android:layout_column="2"/>
    </TableRow>
    <TableRow>
        <Button android:layout_column="1"/>
        <Button android:layout_column="2"/>
    </TableRow>

</TableLayout>